samples/_failures_safe/1761318696_f8ef4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10da87cc.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_10da87cc.c:136:9: error: missing terminating " character
  136 |         "202
      |         ^~~~
./samples/SAFE/__tmp_10da87cc.c:136:9: error: expected expression at end of input
./samples/SAFE/__tmp_10da87cc.c:136:9: error: expected declaration or statement at end of input
